# FastAudio

./: .dockerignore  .env.template  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_07_30_1741-59614516552e_create_users.py  2025_07_30_1750-50fe47749231_update_users.py  2025_07_30_2146-96feea1e37e7_create_audios.py
app/: main.py
app/api/: audios.py  users.py
app/configs/: api.py  base.py  db.py
app/database/: session.py
app/di/: __init__.py  database.py  repos.py  services.py
app/models/: __init__.py  audios.py  users.py
app/repostiories/: audios.py  base.py  users.py
app/schemas/: audios.py  users.py
app/services/: audios.py  users.py
deploy/: Dockerfile
deploy/local/: compose.yaml
